	constraint, change constraint to |i*(lenB/lenA)-j|<=max-diff
	Add multiple alignment class to support construction of EdgeController.

Nov, 2010
	Change Copyright to GPL v2 and update README

	rename max-diff-match to max-diff heuristic.

	replace EdgeController by TraceController use the max-diff delta
	( TraceController ) to restrict alignment of paired and unpaired
	positions (not only ends of arcs) in Aligner. Semantics is given by
	restriction of alignment cuts/matrix cells!

Jan, 2011
	Alignment in limited deviation to a reference alignment
	program deviation computes deviation of alignment to reference
	Deactivate max-diff-aln for --probabilistic/locarna_p
	(Version 1.6)

Feb, 2011
	Restructure code
	library libLocARNA is generated and is used as library by executables

	Fix name normalization bug in mlocarna.in
	(Version 1.6.1)
Mar, 2011
	Doxygen compiles without warning and produces useful documentation
	of the library

	Vienna RNA library is now required for compilation and will be linked

	Locarna accepts clustal files as input and then computes base pair
	probabilities via pf_fold of the Vienna RNA lib. Currently this is
	limited to single sequence clustal files.
	Implement reading of mfasta files (still switched off).

Apr, 2011
	Implement several alignment comparison measures (and use in locarna_deviation) (EXPERIMENTAL)

	Make linking to Vienna librna configurable, default=off! Activate
	by calling ./configure with --enable-librna.

	New strategy for consensus dot plot generation: employ RNAalifold
	-p.  Enable via mlocarna's option --alifold-consensus-dp Note: the
	default consensus dot plot computation seems to be flawed! The new
	tool pp2dot allows to visualize consensus dot plots (by converting
	pp to Vienna-like dot plot postscript files) and should help to
	improve the default strategy (otherwise we are going to replace
	it!)

	mlocarna accepts via --tree-file a super-tree as guide tree and
	automatically projects to the taxa in the input.